<resources>
    <string name="app_name" translatable="false">Attendance App</string>
    <string name="current_month">Current Month</string>
    <string name="current_day">Current Day</string>
    <string name="status_currentDay">A</string>
    <string name="date">Date</string>
    <string name="status_currentPresent">P</string>
    <string name="category">Category</string>
    <string name="please_add_some_data">Please add some data.</string>
    <string name="enter_message">Enter Message</string>
    <string name="enter_date">Enter Date</string>
    <string name="login">Login</string>
    <string name="phone">Phone</string>
    <string name="message_status">Message status</string>
    <string name="verify_otp">Verify Otp</string>
    <string name="get_otp">Get Otp</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="resend_otp_in_seconds">Resend OTP in %1$s seconds</string>
    <string name="please_enter_otp">Please enter Otp.</string>
    <string name="message">Message</string>
    <string name="are_you_sure_you_want_to_delete">"Are you sure you want to delete "</string>
    <string name="delete">Delete</string>
    <string name="data_already_exists_for_this_date">Data already exists for this date.</string>
    <string name="cancel">Cancel</string>
    <string name="selectYear">Select Year</string>
    <string name="ok">Ok</string>
    <string name="data_added">Data Added</string>
    <string name="data_updated">Data Updated</string>
    <string name="data_not_updated">Data Not Updated</string>
    <string name="data_deleted">Data Deleted</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pending">Pending</string>
    <string name="logout">Logout</string>
    <string name="select_language">Select Language</string>
    <string name="user_name">User Name</string>
    <string name="user_number">User Number</string>
    <string name="enter_name">Enter Name</string>
    <string name="please_enter_a_valid_phone_number">Please enter a valid phone number.</string>
    <string name="otp_send">Otp Send.</string>
    <string name="dob">DOB</string>
    <string name="signup">Signup</string>
    <string name="already_have_account">Already have Account ?</string>
    <string name="create_account">Create Account ?</string>
    <string name="enter_category">Enter Category</string>
    <string name="save">Save</string>
    <string name="days">%1$s Days</string>
    <string name="total_present_in">Total Present in %1$s</string>
    <string name="pdf_downloaded_successfully">Download Complete</string>
    <string name="no_account_found">No Account Found</string>
    <string name="this_phone_number_is_used">This phone number is been used</string>
    <string name="data_not_added">Data Not Added</string>
    <string name="cash_withdraw">Cash Withdraw</string>
    <string name="sign">Sign</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="amount">Amount</string>
    <string name="today_attendance_is_completed">Todays Attendance is Completed</string>
    <!--    <string name="total_present_in">Total Present in</string>-->
</resources>