<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <pl.droidsonroids.gif.GifImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:src="@drawable/icon_login"
            android:scaleType="fitXY"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_20sdp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="@dimen/_17ssp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                app:boxStrokeColor="@color/orange"
                app:hintEnabled="false"
                app:startIconDrawable="@drawable/icon_phone"
                app:startIconTint="@color/black">

                <EditText
                    android:id="@+id/edt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/phone"
                    android:maxLines="1"
                    android:maxLength="10"
                    android:inputType="phone"
                    tools:ignore="TextFields" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txt_error_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:text="@string/message_status"
                android:textColor="@color/light_red"
                android:textStyle="bold"
                android:visibility="gone"/>


            <Button
                android:id="@+id/btnGetOtp"
                android:layout_width="@dimen/_180sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:letterSpacing="0.4"
                android:text="@string/get_otp"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:backgroundTint="@color/orange" />

            <TextView
                android:id="@+id/btnSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_15sdp"/>


            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_marginTop="@dimen/_10sdp"/>



        </LinearLayout>


    </LinearLayout>

</FrameLayout>