<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activity.AllAttendanceActivity"
    android:background="@color/background_orange">

    <ImageView
        android:id="@+id/emptyDataImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/data_empty" />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />
    <FrameLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_centerHorizontal="true"
        android:gravity="center">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="30dp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_gravity="center|start"
            android:src="@drawable/left_arrow" />


        <TextView
            android:id="@+id/selectYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_1sdp"
            android:layout_marginVertical="@dimen/_5sdp"/>

        <ImageView
            android:id="@+id/btnDownload"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_gravity="center|end"
            android:src="@drawable/icon_download" />




    </FrameLayout>
    <View
        android:id="@+id/View"
        android:layout_width="@dimen/_55sdp"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/actionBar"/>


        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_orange"
            android:gravity="center"
            android:layout_below="@+id/View"
            android:paddingHorizontal="@dimen/_12sdp"
            android:paddingVertical="@dimen/_8sdp">


            <LinearLayout
                android:id="@+id/layout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|start"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/message"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold"/>

            </LinearLayout>

            <TextView
                android:id="@+id/txtStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/category"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_weight="1"
                android:text="@string/amount"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/imgSign"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sign"
                android:textAlignment="center"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"/>
        </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/attendanceRecyler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout1"/>
    <LinearLayout
        android:id="@+id/layoutDownload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/actionBar"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:visibility="invisible"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:src="@drawable/icon_logo_transparent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textSize="@dimen/_10ssp" />


        </LinearLayout>

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/actionBar"
            android:layout_marginStart="@dimen/_10sdp"
            android:text="Shivam"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:visibility="gone"
            android:textSize="@dimen/_8ssp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Shivam"
                android:visibility="gone"
                android:textSize="@dimen/_8ssp" />

            <TextView
                android:id="@+id/txtAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Shivam"
                android:visibility="gone"
                android:textSize="@dimen/_8ssp" />


            <TextView
                android:id="@+id/txtYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:text="Shivam"
                android:textColor="@color/black"
                android:textSize="@dimen/_8ssp"
                android:visibility="gone"
                android:textStyle="bold" />


        </LinearLayout>


    </LinearLayout>


    <View
        android:id="@+id/translucentOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        app:lottie_rawRes="@raw/animation"
        android:layout_centerInParent="true"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:visibility="gone"/>

</RelativeLayout>