<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayout"
    android:background="@color/background_orange"
    tools:context=".Activity.MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_orange">

            <FrameLayout
                android:id="@+id/action_bar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:background="@color/orange">

                <ImageView
                    android:id="@+id/btnMenu"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_gravity="center|start"
                    android:src="@drawable/icon_menu"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Attendance"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_20ssp"/>

            </FrameLayout>
            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/action_bar">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/btn_year"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_130sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:backgroundTint="@color/light_red">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/dayPresentYear"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_20ssp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/yearTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/total_present_in"
                            android:layout_gravity="center|bottom"
                            android:textColor="@color/white"
                            android:layout_marginBottom="@dimen/_15sdp"
                            android:textSize="@dimen/_18ssp"/>

                    </FrameLayout>

                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_130sdp"
                android:layout_below="@+id/layout"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginEnd="@dimen/_5sdp">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/btn_month"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/light_blue">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/txtMonth"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center|top"
                                android:textColor="@color/white"
                                android:layout_marginTop="@dimen/_15sdp"
                                android:textSize="@dimen/_12ssp"/>


                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <TextView
                                        android:id="@+id/presentMonth"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textSize="@dimen/_15ssp"
                                        android:layout_gravity="center"
                                        android:textColor="@color/white"/>
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/status_currentPresent"
                                        android:textSize="@dimen/_15ssp"
                                        android:layout_gravity="center"
                                        android:textColor="@color/white"/>
                                </LinearLayout>
                                <View
                                    android:layout_width="@dimen/_1sdp"
                                    android:layout_height="match_parent"
                                    android:background="@color/white"
                                    android:layout_marginHorizontal="@dimen/_10sdp"/>
                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <TextView
                                        android:id="@+id/absentMonth"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:textSize="@dimen/_15ssp"
                                        android:layout_gravity="center"
                                        android:textColor="@color/white"/>
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/status_currentDay"
                                        android:textSize="@dimen/_15ssp"
                                        android:layout_gravity="center"
                                        android:textColor="@color/white"/>
                                </LinearLayout>

                            </LinearLayout>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/current_month"
                                android:layout_gravity="center|bottom"
                                android:textColor="@color/white"
                                android:layout_marginBottom="@dimen/_15sdp"
                                android:textSize="@dimen/_12ssp"/>

                        </FrameLayout>

                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/_5sdp">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/btn_day"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/light_pink">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/txtDate"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/date"
                                android:layout_gravity="center|top"
                                android:textColor="@color/white"
                                android:layout_marginTop="@dimen/_15sdp"
                                android:textSize="@dimen/_12ssp"/>


                            <TextView
                                android:id="@+id/txtDay"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:textColor="@color/white"
                                android:textSize="@dimen/_20ssp"
                                android:textStyle="bold"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/current_day"
                                android:layout_gravity="center|bottom"
                                android:textColor="@color/white"
                                android:layout_marginBottom="@dimen/_15sdp"
                                android:textSize="@dimen/_12ssp"/>

                        </FrameLayout>

                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>
            </LinearLayout>


            <FrameLayout
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_70sdp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_15sdp">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floating_action_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/orange"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/plus"
                    app:tint="@color/white"
                    app:elevation="@dimen/_5sdp"
                    android:enabled="false"
                    android:contentDescription="Add Data " />

            </FrameLayout>

            <View
                android:id="@+id/translucentOverlay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#80000000"/>

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                app:lottie_rawRes="@raw/animation"
                android:layout_centerInParent="true"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"/>

        </RelativeLayout>



    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:menu="@menu/navigation_rail_menu"
        android:id="@+id/navigationView"
        app:headerLayout="@layout/header_navigation_drawer"
        android:layout_gravity="start"/>



</androidx.drawerlayout.widget.DrawerLayout>